syntax = "proto3";

import "google/protobuf/timestamp.proto";
package ru.spbau.mit;

message ChatMessage {
    string from = 1;
    string data = 2;
    string message = 3;
}

message ChatMessageFromServer {
    ChatMessage message = 1;
}

service ChatService {
    rpc chat(stream ChatMessage) returns (stream ChatMessageFromServer);
}